<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Reading Tracker</string>

    <!-- ActionBar GUI -->

    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>

    <!-- GUI -->
    <string name="logo_content_description" translatable="false">Logo</string>
    <string name="accessibilityDescription">Monitor your book reading habits</string>
    <string name="accessGrantedOK">OK</string>
    <string name="accessGrantedNotOk">None</string>
    <string name="supportedEbookReaderInstalled">Installed</string>
    <string name="supportedEbookReaderNotInstalled">Not installed</string>
    <string name="accessInAccessibilitySettings">Access in \'Accessibilty Settings\':</string>
    <string name="supportedEbookReader">Supported e-book reader:</string>

    <!-- Settings page -->
    <string name="creditsTitle" translatable="false">Credits</string>
<!--     <string name="readingTrackerToS" translatable="false">Reading Tracker web site: TODO put linkToS can be read here TODO: Link</string> -->

    <string name="readingTrackerSlogan" translatable="false">Now you are in control of what you read</string>
    <string name="readingTrackerCopyright">Reading Tracker © 2014-2016 Dmitriy Kazimirov</string>
    <string name="readingTrackerMailTo" translatable="false">e-mail: dmitriy.kazimirov@vioran.com</string>
    <!-- TODO: Add notes about ReadingTrackerServer's license. -->
    <string name="readingTrackerCopyrightLicense" translatable="false">Reading Tracker Application itself is licensed under GNU Public License version 3, permission is granted to link with all libraries below in credits</string>

    <string name="readingTracker3rdparty" translatable="false">Following 3rd-party components were used:</string>
    <string name="readingTrackerToS" translatable="false">Reading Tracker ToS can be read here TODO: Link</string>
    <string name="readingTrackerPrivacyPolicy" translatable="false">Reading Tracker\'s Privacy Policy can be read here https://intari.github.io/readingtracker/#privacy-policy-for-playstore-version</string>
    <string name="creditsIcons" translatable="false">Icons are based on materials from http://www.flaticon.com by http://www.freepik.com, licensed under CC BY 3.0</string>
    <string name="creditsParsePlatform" translatable="false">Application uses Parse Platform by https://parse.com/ © Parse LLC, Facebook </string>
    <string name="creditsParseUI" translatable="false">Application uses Parse UI library from https://github.com/ParsePlatform/ParseUI-Android, © 2014, Parse, LLC </string>
    <string name="creditsAOSP" translatable="false">Application uses some code from The Android Open Source Project © The Android Open Source Project, under Apache License 2.0 </string>

    <string name="readingTrackerVersionLineDefault">Loading…</string>

    <string name="readingTrackerVersion">Version %1$s (%2$s / %3$s)</string>
    <string name="readingTrackerBuildOn">Built on %1$s by %2$s at %3$s</string>

    <!-- Notification messages -->
    <string name="app_started_notification">Reading Tracker started</string>
    <string name="tap_me">Now you are in control of your reading</string>
    <string name="update_is_available">Update is available</string>
    <string name="update_is_not_available">No updates found</string>

    <!-- GUI strings -->
    <string name="guiCurrentlyReadingShort">Reading %1$s by %2$s</string>
    <string name="guiCurrentlyReadingLong">Reading %1$s by %2$s (page %3$s of %4$s) for %5$.2f minutes at %6$.2f pages per minute</string>
    <string name="guiCurrentlyReadingLongZeroSpeed">Reading %1$s by %2$s (page %3$s of %4$s) for %5$.2f minutes</string>

    <string name="tapMeCurrentlyReadingLong">%5$.2f minutes @ %6$.2f pages per minute (%3$s/%4$s). %1$s by %2$s</string>
    <string name="tapMeCurrentlyReadingShort">%1$s by %2$s</string>
    <string name="tapMeCurrentlyReadingLongZeroSpeed">%5$.2f minutes (%3$s/%4$s) %1$s by %2$s</string>
    <string name="titleCurrentlyReading">%1$s by %2$s</string>

    <string name="sessionNoLongerValid">Session is no longer valid, please log out and log in again.</string>
    <string name="sessionNoLongerValidOk">Ok</string>

    <string name="goToAccessibilitySettingsMessage">Do you want to open \'Accessibility Settings\' and allow access for  \'Reading Tracker\' here?</string>
    <string name="goToAccessibilitySettingsOK">Yes, please</string>
    <string name="goToAccessibilitySettingsCancel">No</string>

    <!-- Parse Login strings -->
    <string name="profile_logo_content_description" translatable="false">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in</string>
    <string name="profile_login_button_label">Log in</string>

    <!-- Facebook support -->
    <string name="facebook_app_id" translatable="false">343039695901464</string>
    <string name="logo" translatable="false">logo</string>

    <string-array name="my_facebook_permissions" translatable="false">
        <item>public_profile</item>
        <item>user_friends</item>
        <item>email</item>
    </string-array>


</resources>
