...
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:id="@+id/AboutActivity"
    tools:context=".AboutActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

...
